{
    "name": "MyInput",
    "maps": [
        {
            "name": "basicInputs",
            "id": "e709378b-567c-4ab7-80de-7004b375adf3",
            "actions": [
                {
                    "name": "SimpleClick",
                    "type": "PassThrough",
                    "id": "1b9fe422-0fdc-4099-b02f-2fa054d12121",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "4e8cafcf-761c-4d64-9565-7b594c3d2234",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6f7f9265-6b0a-40c6-a57a-3ffaf4c3b33a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SimpleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d962e3f8-0ef0-4948-a292-fa917eb0684d",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SimpleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "670ed831-000a-4265-a262-53462042f9d9",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af1904e9-558a-4b9d-86aa-aeecbf2a86ac",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}